// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> can render without theme 1`] = `
<button
  className="Button-sc-1gypvbx-0 "
>
  Test button
</button>
`;

exports[`<Button> supports the as prop 1`] = `
<a
  className="Button-sc-1gypvbx-0 "
>
  Test button
</a>
`;
